--- a/index.html
+++ b/index.html
@@ -7,13 +7,33 @@
     <title>Document</title>
     <script src="https://unpkg.com/vue@3.0.2/dist/vue.global.js"></script>
     <style>
-        .box {
-            padding: 100px 0;
-            width: 400px;
-            text-align: center;
-            background: #ddd;
-            margin: 20px;
-            display: inline-block;
+        body {
+            background: #eee;
+            max-width: 960px;
+            margin: 20px auto;
+        }
+
+        p,
+        h3,
+        ul {
+            margin: 0;
+            padding: 0;
+        }
+
+        li {
+            list-style-type: none;
+            background: #fff;
+            margin: 20px auto;
+            padding: 10px 20px;
+            border-radius: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        li.fav {
+            background: #ff9ed2;
+            color: white;
         }
     </style>
 </head>
@@ -21,17 +41,21 @@
 <body>
     <h1>Hello Vue!</h1>
     <div id="app">
+        <a :href="url">Woo</a>
+
+
         <h2>I am the template now</h2>
         <div v-if="showBooks">
             <ul>
-                <li v-for="book in books">
+                <li @click="toggleFav(book)" v-for="book in filteredBooks" :class="{fav: book.isFav}">
+                    <img style="width: 200px;" :src="book.img" :alt="book.title">
                     <p>{{book.title}}</p>
                     <p>{{book.author}}</p>
                 </li>
             </ul>
         </div>
-        <button v-on:click="age++">Increase Age</button>
-        <button v-on:click="age--">Decrease Age</button>
+        <!-- <button v-on:click="age++">Increase Age</button>
+        <button v-on:click="age--">Decrease Age</button> -->
         <button v-on:click="toggleShowBooks">
             <span v-if="showBooks">Hide Books</span>
             <span v-else>Show Books</span>
@@ -41,10 +65,10 @@
         <div v-show="showBooks">Currently Showing Books</div>
         <br>
 
-        <div class="box" @mouseover="handleEvent($event, 5)">Mouse Over</div>
+        <!-- <div class="box" @mouseover="handleEvent($event, 5)">Mouse Over</div>
         <div class="box" @mouseleave="handleEvent">Mouse Leave</div>
         <div class="box" @dblclick="handleEvent">Double Click</div>
-        <div class="box" @mousemove="handleMousemove">Position: {{x}}:{{y}}</div>
+        <div class="box" @mousemove="handleMousemove">Position: {{x}}:{{y}}</div> -->
 
     </div>
     <script src="./app.js"></script>
